Удобный монитор камер и портативный мониторинг для детектива. (#25)
* Улучшение мониторинга камер

* Портативный монитор камер для дека

* чейнжлог

--- a/Resources/Prototypes/Catalog/Fills/Lockers/security.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/security.yml
@@ -197,6 +197,7 @@
       - id: BoxEvidenceMarkers
       - id: LunchboxSecurityFilledRandom # Delta-v Lunchboxes!
         prob: 0.3
+      - id: PortableSurveillanceCameraMonitor # Sunrise-edit
 
 - type: entity
   id: ClosetBombFilled
