--- a/Resources/Prototypes/Entities/Structures/Machines/surveillance_camera_routers.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/surveillance_camera_routers.yml
@@ -38,6 +38,7 @@
         - SurveillanceCameraGeneral
         - SurveillanceCameraMedical
         - SurveillanceCameraCommand
+      subnetColor: "#088743" # Sunrise-Edit
 
 - type: entity
   parent: SurveillanceCameraRouterBase
@@ -46,6 +47,7 @@
   components:
     - type: SurveillanceCameraRouter
       subnetFrequency: SurveillanceCameraEngineering
+      subnetColor: "#EFB341" # Sunrise-Edit
 
 - type: entity
   parent: SurveillanceCameraRouterBase
@@ -54,6 +56,7 @@
   components:
     - type: SurveillanceCameraRouter
       subnetFrequency: SurveillanceCameraSecurity
+      subnetColor: "#DE3A3A" # Sunrise-Edit
 
 - type: entity
   parent: SurveillanceCameraRouterBase
@@ -62,6 +65,7 @@
   components:
     - type: SurveillanceCameraRouter
       subnetFrequency: SurveillanceCameraScience
+      subnetColor: "#D381C9" # Sunrise-Edit
 
 - type: entity
   parent: SurveillanceCameraRouterBase
@@ -70,6 +74,7 @@
   components:
     - type: SurveillanceCameraRouter
       subnetFrequency: SurveillanceCameraSupply
+      subnetColor: "#A46106" # Sunrise-Edit
 
 - type: entity
   parent: SurveillanceCameraRouterBase
@@ -78,6 +83,7 @@
   components:
     - type: SurveillanceCameraRouter
       subnetFrequency: SurveillanceCameraCommand
+      subnetColor: "#052EED" # Sunrise-Edit
 
 - type: entity
   parent: SurveillanceCameraRouterBase
@@ -86,6 +92,7 @@
   components:
     - type: SurveillanceCameraRouter
       subnetFrequency: SurveillanceCameraService
+      subnetColor: "#9FED58" # Sunrise-Edit
 
 - type: entity
   parent: SurveillanceCameraRouterBase
@@ -94,6 +101,7 @@
   components:
     - type: SurveillanceCameraRouter
       subnetFrequency: SurveillanceCameraMedical
+      subnetColor: "#52B4E9" # Sunrise-Edit
 
 - type: entity
   parent: SurveillanceCameraRouterBase
@@ -102,6 +110,7 @@
   components:
     - type: SurveillanceCameraRouter
       subnetFrequency: SurveillanceCameraGeneral
+      subnetColor: "#088743" # Sunrise-Edit
 
 - type: entity
   parent: [ BaseMachinePowered, ConstructibleMachine ]
@@ -135,6 +144,7 @@
     - type: SurveillanceCameraRouter
       setupAvailableNetworks:
         - SurveillanceCameraEntertainment
+      subnetColor: "#088743" # Sunrise-Edit
 
 - type: entity
   parent: SurveillanceCameraWirelessRouterBase
@@ -143,3 +153,4 @@
   components:
     - type: SurveillanceCameraRouter
       subnetFrequency: SurveillanceCameraEntertainment
+      subnetColor: "#088743" # Sunrise-Edit
