Кучка мелких изменений (#128)
* Теперь бодикамеры пикают реже и тише; Шанс стать инженером повышен; Исправлен перевод частот

* подпрофессия горничной для профессиональных уборщиков

* Добавил ионную винтовку

* Добавил неуязвимость к эми у ионной пушки, импульсных пушек. Добавил урезанную версию РПГ для СБ.

* Добавил оружейку гамма кода на дельту и ионную пушку в арсенал СБ на фланде.

* пофиксил вентиляторы на боксе

* дебаф свинолюдов

* Добавил безделушки СБ по совету @VigersRay. Бодикамера была перенесена туда.

---------

Co-authored-by: Vigers Ray <60344369+VigersRay@users.noreply.github.com>

--- a/Resources/Prototypes/Roles/Jobs/departments.yml
+++ b/Resources/Prototypes/Roles/Jobs/departments.yml
@@ -85,6 +85,7 @@
   name: department-Engineering
   description: department-Engineering-description
   color: "#EFB341"
+  weight: 10  # Sunrise-weights
   roles:
   - AtmosphericTechnician
   - ChiefEngineer
@@ -141,7 +142,7 @@
   name: department-Specific
   description: department-Specific-description
   color: "#9FED58"
-  weight: 10
+  weight: 5  # Sunrise-weights
   roles:
   - Boxer
   - Reporter
