--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Battery/battery_guns.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Battery/battery_guns.yml
@@ -221,6 +221,7 @@
     selectedMode: SemiAuto
     availableModes:
     - SemiAuto
+  - type: EmpImmune  # Sunrise-EMP
   - type: HitscanBatteryAmmoProvider
     proto: RedLaserPractice
     fireCost: 62.5
@@ -261,6 +262,7 @@
     - SemiAuto
     soundGunshot:
       path: /Audio/Weapons/Guns/Gunshots/laser_cannon.ogg
+  - type: EmpImmune  # Sunrise-EMP
   - type: HitscanBatteryAmmoProvider
     proto: Pulse
     fireCost: 200
@@ -293,6 +295,7 @@
       - FullAuto
     soundGunshot:
       path: /Audio/Weapons/Guns/Gunshots/laser_cannon.ogg
+  - type: EmpImmune  # Sunrise-EMP
   - type: HitscanBatteryAmmoProvider
     proto: Pulse
     fireCost: 200
@@ -320,6 +323,7 @@
     fireRate: 1.5
     soundGunshot:
       path: /Audio/Weapons/Guns/Gunshots/laser3.ogg
+  - type: EmpImmune
   - type: HitscanBatteryAmmoProvider
     proto: Pulse
     fireCost: 100
