--- a/Resources/Prototypes/Recipes/Crafting/Graphs/bots/supplybot.yml
+++ b/Resources/Prototypes/Recipes/Crafting/Graphs/bots/supplybot.yml
@@ -10,12 +10,12 @@
         icon:
           sprite: Objects/Misc/proximity_sensor.rsi
           state: icon
-        name: proximity sensor
+        name: датчик движения  # Sunrise-recipes
       - tag: BorgHead
         icon:
           sprite: Objects/Specific/Robotics/cyborg_parts.rsi
           state: borg_head
-        name: borg head
+        name: голову борга  # Sunrise-recipes
         doAfter: 1
       - material: Steel
         amount: 10
