--- a/Resources/Prototypes/Recipes/Crafting/tiles.yml
+++ b/Resources/Prototypes/Recipes/Crafting/tiles.yml
@@ -1,79 +1,79 @@
 # These should be lathe recipes but lathe code sucks so hard rn so they'll be crafted by hand.
 
 - type: construction
-  name: steel tile
+  name: стальная плитка  # Sunrise-recipes
   id: TileSteel
   graph: TileSteel
   startNode: start
   targetNode: steeltile
   category: construction-category-tiles
-  description: "Four steel station tiles."
+  description: Четыре стальных плитки.  # Sunrise-recipes
   icon: { sprite: Objects/Tiles/tile.rsi, state: steel }
   objectType: Item
 
 - type: construction
-  name: wood floor
+  name: деревянный пол  # Sunrise-recipes
   id: TileWood
   graph: TileWood
   startNode: start
   targetNode: woodtile
   category: construction-category-tiles
-  description: "Four pieces of wooden station flooring."
+  description: Четыре куска деревянного пола для станции.  # Sunrise-recipes
   icon: { sprite: Objects/Tiles/tile.rsi, state: wood }
   objectType: Item
-  
+
 - type: construction
-  name: filled brass plate
+  name: заполненная латунная пластина  # Sunrise-recipes
   id: TileBrassFilled
   graph: TilesBrass
   startNode: start
   targetNode: filledPlate
   category: construction-category-tiles
-  description: "Four pieces of brass station flooring, only compatible with brass plating."
+  description: Четыре штуки латунного напольного покрытия, совместимого только с латунным покрытием.  # Sunrise-recipes
   icon: { sprite: Objects/Tiles/tile.rsi, state: brass-filled }
   objectType: Item
-  
+
 - type: construction
-  name: smooth brass plate
+  name: гладкая латунная пластина  # Sunrise-recipes
   id: TileBrassReebe
   graph: TilesBrass
   startNode: start
   targetNode: reebe
   category: construction-category-tiles
-  description: "Four pieces of smooth brass station flooring, only compatible with brass plating."
+  description: Четыре куска гладкого латунного напольного покрытия, совместимого только с латунным покрытием.  # Sunrise-recipes
   icon: { sprite: Objects/Tiles/tile.rsi, state: reebe }
   objectType: Item
 
 - type: construction
-  name: white tile
+  name: белая плитка  # Sunrise-recipes
   id: TileWhite
   graph: TileWhite
   startNode: start
   targetNode: whitetile
-  category: construction-category-tiles
-  description: "Four white station tiles."
+  category: construction-category-tiles  # Sunrise-recipes
+  description: Четыре белые плитки.
   icon: { sprite: Objects/Tiles/tile.rsi, state: white }
   objectType: Item
 
 - type: construction
-  name: dark tile
+  name: темная плитка  # Sunrise-recipes
   id: TileDark
   graph: TileDark
   startNode: start
   targetNode: darktile
   category: construction-category-tiles
-  description: "Four dark station tiles."
+  description: Четыре темные плитки станции.  # Sunrise-recipes
   icon: { sprite: Objects/Tiles/tile.rsi, state: dark }
   objectType: Item
 
 - type: construction
-  name: flesh tile
+  name: плитка из плоти  # Sunrise-recipes
   id: TileFlesh
   graph: TileFlesh
   startNode: start
   targetNode: fleshTile
   category: construction-category-tiles
-  description: "Four fleshy tiles."
+  description: Четыре мясистые плитки.  # Sunrise-recipes
   icon: { sprite: Objects/Tiles/tile.rsi, state: meat }
   objectType: Item
 
@@ -188,12 +188,12 @@
 #   objectType: Item
 
 - type: construction
-  name: large wood floor
+  name: большой деревянный пол  # Sunrise-recipes
   id: TileWoodLarge
   graph: TileWoodLarge
   startNode: start
   targetNode: woodtilelarge
   category: construction-category-tiles
-  description: "Four pieces of wooden station flooring."
+  description: Четыре куска деревянного пола для станции.  # Sunrise-recipes
   icon: { sprite: Objects/Tiles/tile.rsi, state: wood-large }
   objectType: Item
