--- a/Resources/Prototypes/Recipes/Crafting/Graphs/bots/cleanbot.yml
+++ b/Resources/Prototypes/Recipes/Crafting/Graphs/bots/cleanbot.yml
@@ -10,18 +10,18 @@
         icon:
           sprite: Objects/Tools/bucket.rsi
           state: icon
-        name: bucket
+        name: ведро  # Sunrise-recipes
       - tag: ProximitySensor
         icon:
           sprite: Objects/Misc/proximity_sensor.rsi
           state: icon
-        name: proximity sensor
+        name: датчик движения  # Sunrise-recipes
         doAfter: 2
       - tag: BorgArm
         icon:
           sprite: Mobs/Silicon/drone.rsi
           state: l_hand
-        name: borg arm
+        name: руку борга  # Sunrise-recipes
         doAfter: 2
   - node: bot
     entity: MobCleanBot
