--- a/Resources/Prototypes/Recipes/Crafting/Graphs/bots/honkbot.yml
+++ b/Resources/Prototypes/Recipes/Crafting/Graphs/bots/honkbot.yml
@@ -10,23 +10,23 @@
         icon:
           sprite: Objects/Storage/Happyhonk/clown.rsi
           state: box
-        name: happy honk meal
+        name: Хэппи Хонк  # Sunrise-recipes
       - tag: BikeHorn
         icon:
             sprite: Objects/Fun/bikehorn.rsi
             state: icon
-        name: bike horn
+        name: велосипедный клаксон  # Sunrise-recipes
         doAfter: 2
       - tag: ProximitySensor
         icon:
           sprite: Objects/Misc/proximity_sensor.rsi
           state: icon
-        name: proximity sensor
+        name: датчик движения  # Sunrise-recipes
       - tag: BorgArm
         icon:
           sprite: Mobs/Silicon/drone.rsi
           state: l_hand
-        name: borg arm
+        name: руку борга  # Sunrise-recipes
         doAfter: 2
   - node: bot
     entity: MobHonkBot
@@ -43,23 +43,23 @@
         icon:
           sprite: Objects/Storage/Happyhonk/cluwne.rsi
           state: box
-        name: woeful cluwne meal
+        name: обед Жалкий Клувень  # Sunrise-recipes
       - tag: CluwneHorn
         icon:
           sprite: Objects/Fun/cluwnehorn.rsi
           state: icon
-        name: broken bike horn
+        name: сломанный велосипедный клаксон  # Sunrise-recipes
         doAfter: 2
       - tag: ProximitySensor
         icon:
           sprite: Objects/Misc/proximity_sensor.rsi
           state: icon
-        name: proximity sensor
+        name: датчик движения  # Sunrise-recipes
       - tag: BorgArm
         icon:
           sprite: Mobs/Silicon/drone.rsi
           state: l_hand
-        name: borg arm
+        name: руку борга  # Sunrise-recipes
         doAfter: 2
   - node: bot
     entity: MobJonkBot
