--- a/Resources/Prototypes/Recipes/Crafting/Graphs/bots/medibot.yml
+++ b/Resources/Prototypes/Recipes/Crafting/Graphs/bots/medibot.yml
@@ -10,24 +10,24 @@
         icon:
           sprite: Objects/Specific/Medical/firstaidkits.rsi
           state: firstaid
-        name: medkit
+        name: аптечку  # Sunrise-recipes
       - tag: DiscreteHealthAnalyzer
         icon:
           sprite: Objects/Specific/Medical/healthanalyzer.rsi
           state: analyzer
-        name: health analyzer
+        name: анализатор здоровья  # Sunrise-recipes
         doAfter: 2
       - tag: ProximitySensor
         icon:
           sprite: Objects/Misc/proximity_sensor.rsi
           state: icon
-        name: proximity sensor
+        name: датчик движения  # Sunrise-recipes
         doAfter: 2
       - tag: BorgArm
         icon:
           sprite: Mobs/Silicon/drone.rsi
           state: l_hand
-        name: borg arm
+        name: руку борга  # Sunrise-recipes
         doAfter: 2
   - node: bot
     entity: MobMedibot
