--- a/Resources/Prototypes/Recipes/Crafting/Graphs/improvised/potato.yml
+++ b/Resources/Prototypes/Recipes/Crafting/Graphs/improvised/potato.yml
@@ -7,7 +7,7 @@
         - to: potatobattery
           steps:
             - tag: Potato
-              name: a potato
+              name: картошку
               icon:
                 sprite: Objects/Specific/Hydroponics/potato.rsi
                 state: produce
@@ -30,13 +30,13 @@
         - to: potatoai
           steps:
             - tag: PotatoBattery
-              name: a potato battery
+              name: картофельную батарею  # Sunrise-recipes
               icon:
                 sprite: Objects/Power/power_cells.rsi
                 state: potato
               doAfter: 1
             - tag: SmallAIChip
-              name: a super-compact AI chip
+              name: супер компактный чип искусственного интеллекта  # Sunrise-recipes
               icon:
                 sprite: Objects/Misc/potatoai_chip.rsi
                 state: icon
@@ -61,12 +61,12 @@
               amount: 2
               doAfter: 1
             - tag: CapacitorStockPart
-              name: capacitor
+              name: конденсатор  # Sunrise-recipes
               icon:
                 sprite: Objects/Misc/stock_parts.rsi
                 state: capacitor
             - tag: CapacitorStockPart
-              name: capacitor
+              name: конденсатор  # Sunrise-recipes
               icon:
                 sprite: Objects/Misc/stock_parts.rsi
                 state: capacitor
