--- a/Resources/Prototypes/Recipes/Crafting/smokeables.yml
+++ b/Resources/Prototypes/Recipes/Crafting/smokeables.yml
@@ -1,91 +1,91 @@
 - type: construction
-  name: joint
+  name: косяк  # Sunrise-recipes
   id: smokeableJoint
   graph: smokeableJoint
   startNode: start
   targetNode: joint
   category: construction-category-misc
-  description: "A roll of dried plant matter wrapped in thin paper."
+  description: Рулон высушенной растительной массы, завернутый в тонкую бумагу.  # Sunrise-recipes
   icon: { sprite: Objects/Consumable/Smokeables/Cannabis/joint.rsi, state: unlit-icon }
   objectType: Item
-  
+
 - type: construction
-  name: rainbow joint
+  name: радужный косяк  # Sunrise-recipes
   id: smokeableJointRainbow
   graph: smokeableJointRainbow
   startNode: start
   targetNode: jointRainbow
   category: construction-category-misc
-  description: "A roll of dried plant matter wrapped in thin paper."
+  description: Рулон высушенной растительной массы, завернутый в тонкую бумагу.  # Sunrise-recipes
   icon: { sprite: Objects/Consumable/Smokeables/Cannabis/joint.rsi, state: unlit-icon }
   objectType: Item
 
 - type: construction
-  name: blunt
+  name: сигара  # Sunrise-recipes
   id: smokeableBlunt
   graph: smokeableBlunt
   startNode: start
   targetNode: blunt
   category: construction-category-misc
-  description: "A roll of dried plant matter wrapped in a dried tobacco leaf."
+  description: Рулон высушенной растительной массы, завернутый в высушенный табачный лист.  # Sunrise-recipes
   icon: { sprite: Objects/Consumable/Smokeables/Cannabis/blunt.rsi, state: unlit-icon }
   objectType: Item
 
 - type: construction
-  name: rainbow blunt
+  name: радужная сигара  # Sunrise-recipes
   id: smokeableBluntRainbow
   graph: smokeableBluntRainbow
   startNode: start
   targetNode: bluntRainbow
   category: construction-category-misc
-  description: "A roll of dried plant matter wrapped in a dried tobacco leaf."
+  description: Рулон высушенной растительной массы, завернутый в высушенный табачный лист.  # Sunrise-recipes
   icon: { sprite: Objects/Consumable/Smokeables/Cannabis/blunt.rsi, state: unlit-icon }
   objectType: Item
 
 - type: construction
-  name: cigarette
+  name: сигарета  # Sunrise-recipes
   id: smokeableCigarette
   graph: smokeableCigarette
   startNode: start
   targetNode: cigarette
   category: construction-category-misc
-  description: "A roll of tobacco and nicotine."
+  description: Рулон с табаком и никотином.  # Sunrise-recipes
   icon: { sprite: Objects/Consumable/Smokeables/Cigarettes/cigarette.rsi, state: unlit-icon }
   objectType: Item
 
 # I wanted to put a hand-grinder here but we need construction graphs that use non-consumed catalysts first.
 
 - type: construction
-  name: ground cannabis
+  name: молотая конопля  # Sunrise-recipes
   id: smokeableGroundCannabis
   graph: smokeableGroundCannabis
   startNode: start
   targetNode: ground
   category: construction-category-misc
-  description: "Ground cannabis, ready to take you on a trip."
+  description: Молотая конопля, готовая взять вас в путешествие.  # Sunrise-recipes
   icon: { sprite: Objects/Misc/reagent_fillings.rsi, state: powderpile }
 #    color: darkgreen
   objectType: Item
 
 - type: construction
-  name: ground rainbow cannabis
+  name: радужная конопля  # Sunrise-recipes
   id: smokeableGroundCannabisRainbow
   graph: smokeableGroundCannabisRainbow
   startNode: start
   targetNode: groundRainbow
   category: construction-category-misc
-  description: "Ground rainbow cannabis, ready to take you on a trip."
+  description: Молотая радужная конопля, готова взять вас в путешествие.  # Sunrise-recipes
   icon: { sprite: Objects/Specific/Hydroponics/rainbow_cannabis.rsi, state: powderpile_rainbow }
   objectType: Item
 
 - type: construction
-  name: ground tobacco
+  name: молотый табак  # Sunrise-recipes
   id: smokeableGroundTobacco
   graph: smokeableGroundTobacco
   startNode: start
   targetNode: ground
   category: construction-category-misc
-  description: "Ground tobacco, perfect for hand-rolled cigarettes."
+  description: Молотый табак, идеально подходящий для сигарет ручной скрутки.  # Sunrise-recipes
   icon: { sprite: Objects/Misc/reagent_fillings.rsi, state: powderpile }
 #    color: brown
   objectType: Item
