--- a/Resources/Prototypes/Entities/Objects/Tools/access_configurator.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/access_configurator.yml
@@ -119,6 +119,9 @@
     - CentralCommand
     - NuclearOperative
     - SyndicateAgent
+    - BlueShield
+    - Ntrep
+    - Magistrat
     privilegedIdSlot:
       name: id-card-console-privileged-id
       ejectSound: /Audio/Machines/id_swipe.ogg
