tradução e leve ajuste pra funcionar

--- a/Resources/Prototypes/Corvax/portable_computers.yml
+++ b/Resources/Prototypes/Corvax/portable_computers.yml
@@ -1,7 +1,7 @@
 - type: entity
   id: PortableSurveillanceCameraMonitor
-  name: портативный монитор камер
-  description: Позволяет вам в любом месте смотреть за экипажем.
+  name: Monitor de Câmeras Portátil
+  description: Permite que você observe a equipe de qualquer lugar.
   parent: BaseItem
   components:
   - type: Sprite
