Изменил корабельные пушки (#640)
Co-authored-by: Vigers Ray <60344369+VigersRay@users.noreply.github.com>

--- a/Resources/Prototypes/Research/arsenal.yml
+++ b/Resources/Prototypes/Research/arsenal.yml
@@ -167,8 +167,8 @@
   - PowerCageSmall
   - PowerCageMedium
   - MagazineGrenadeEmpty
-  - GrenadeFlash
-  - GrenadeBlast
+  - ShellFlashArtillery
+  - ShellBlastArtillery
   - ShuttleGunSvalinnMachineGunCircuitboard
   - ShuttleGunPerforatorCircuitboard
   - ShuttleGunFriendshipCircuitboard
@@ -212,7 +212,7 @@
   tier: 3
   cost: 15000
   recipeUnlocks:
-  - GrenadeEMP
+  - ShellEMPArtillery
   - PowerCageHigh
   - ShuttleGunDusterCircuitboard
   technologyPrerequisites:
